Services additional style

--- a/html/services.html
+++ b/html/services.html
@@ -97,31 +97,31 @@
             <h3 class="heading-tertiary">services offerred</h3>
             <div class="services-cards-container">
                 <div class="card-air-dispersion">
-                    <!-- <img src="../images/site-images/service-1.JPG" class="image-style" alt="Air dispersion modelling image"> -->
+                    <img src="../images/site-images/service-1.JPG" class="image-style" alt="Air dispersion modelling image">
                     <div class="text-card-holder">
                         <h4 class="margin-offset">Air dispersion modelling</h4>
-                        <p class="display">Our services
                         </p>
-                        <button id="btn-air-dispersion" class="service-card-btn"><span>learn more...</span></button>
                     </div>
-                    
+                    <div class="btn-position">
+                        <button class="btn-air-dispersion"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></button>
+                    </div>
                 </div> 
                 <div class="card-GIS">
-                    <!-- <img src="../images/site-images/service-2.JPG" class="image-style" alt="Air dispersion modelling image"> -->
+                    <img src="../images/site-images/service-2.JPG" class="image-style" alt="Air dispersion modelling image">
                     <div class="text-card-holder">
                         <h4 class="margin-offset">GIS for resource mapping and Planning</h4>
-                        <p class="display">Our services
-                        </p>
-                        <button id="btn-air-dispersion" class="service-card-btn"><span>learn more...</span></button>
+                    </div>
+                    <div class="btn-position">
+                        <button class="btn-air-dispersion"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></button>
                     </div>
                 </div> 
                 <div class="card-ESIAA">
-                    <!-- <img src="../images/site-images/service-3.png" class="image-style" alt="Air dispersion modelling image"> -->
+                    <img src="../images/site-images/service-3.png" class="image-style" alt="Air dispersion modelling image">
                     <div class="text-card-holder">
                         <h4 class="margin-offset">Environmental and Social Impact Assessment and Audits</h4>
-                        <p class="display">Our services
-                        </p>
-                        <button id="btn-air-dispersion" class="service-card-btn"><span>learn more...</span></button>
+                    </div>
+                    <div class="btn-position">
+                        <button class="btn-air-dispersion"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></button>
                     </div>
                 </div> 
             </div>
