Styling sector page

--- a/html/clients.html
+++ b/html/clients.html
@@ -10,7 +10,7 @@
         <link rel="pingback" href="https: //domainname.com/xmlrpc.php" />
         <title>Aeromaps Consultancy</title>
         <!-- style and script resources -->
-        <link rel="stylesheet" href="../css/index.css" media="all">
+        <link rel="stylesheet" href="../index.css">
         <script src=""></script>
         <!--meta properties -->
         <meta name="description" content=" Aeromaps Kenya." />
