--- a/html/sectors.html
+++ b/html/sectors.html
@@ -92,29 +92,53 @@
             <h3 class="heading-tertiary">Sectors served</h3>
             <h4>We serve clients in diverse sectors:</h4>
             <div class="client">
-                <div class="client-card"><span><i class="fas fa-car-battery fa-2x icon-style"></i></span>
-                    <span>Power</span>
-                    <img src="../images/site-images/ph-8.jpg" alt="electric power production">
+                <div class="client-card">
+                    <div>
+                        <img src="../images/site-images/ph-8.jpg" alt="electric power production">
+                    </div>
+                    <div>
+                        <span class="span-text_style">Power</span>
+                    </div>
             </div>
-                <div class="client-card"><span><i class="fas fa-industry icon-style fa-2x"></i></span>
-                    <span>Energy</span>
-                    <img src="../images/site-images/ph-9.jpg" alt="energy">
+                <div class="client-card">
+                    <div>
+                        <img src="../images/site-images/ph-9.jpg" alt="energy">
+                    </div>
+                    <div>
+                        <span class="span-text_style">Energy</span>
+                    </div>
                 </div>
-                <div class="client-card"><span><i class="fas fa-utensils-alt icon-style fa-2x"></i></span>
-                    <span> Mining</span>
-                    <img src="../images/site-images/ph-7.jpg" alt="mining activity">
+                <div class="client-card">
+                    <div>
+                        <img src="../images/site-images/ph-7.jpg" alt="mining activity">
+                    </div>
+                    <div>
+                        <span class="span-text_style"> Mining</span>
+                    </div>
                 </div>
-               <div class="client-card"><span><i class="far fa-industry-alt icon-style fa-2x"></i></span>
-                  <span>Industrial</span>
-                  <img src="../images/site-images/ph-5.jpg" alt="industrial activity">
+               <div class="client-card">
+                  <div>
+                    <img src="../images/site-images/ph-5.jpg" alt="industrial activity">
+                  </div>
+                  <div>
+                    <span class="span-text_style">Industrial</span>
+                  </div>
               </div>
-               <div class="client-card"><span><i class="fal fa-construction icon-style fa-2x"></i></span>
-                <span>Infrustructure</span>
-                  <img src="../images/site-images/ph-6.jpg" alt="road infrustructure">
+               <div class="client-card">
+                  <div>
+                    <img src="../images/site-images/ph-6.jpg" alt="road infrustructure">
+                  </div>
+                  <div>
+                    <span class="span-text_style">Infrustructure</span>
+                  </div>
             </div>
-               <div class="client-card"><span><i class="fab fa-acquisitions-incorporated fa-2x icon-style"></i></span>
-                <span>Corporates</span>
-                <img src="../images/site-images/ph-10.jpg" alt="Corporates">
+               <div class="client-card">
+                <div>
+                    <img src="../images/site-images/ph-10.jpg" alt="Corporates">
+                </div>
+                <div>
+                    <span class="span-text_style">Corporates</span>
+                </div>
                 </div>
             </div>
        </main>
